# diff2tweet

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTES.md  README.md  diff2tweet.yaml  pyproject.toml
.claude/: settings.local.json
agents/: AGENTS.md  ARCHITECTURE.md  DECISIONS.md  README.md  SESSION_STATE.md
dev_tools/: repos.yaml  run_batch.py  run_eval.py
docs/: DESIGN.md  config.md
src/diff2tweet/: __init__.py  artifacts.py  cli.py  git.py  logs.py  notes.py  prompt.py  readme.py
src/diff2tweet/config/: __init__.py  config_schema.py  load_config.py  settings.py
src/diff2tweet/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
src/difftotweet/: __init__.py  artifacts.py  cli.py  git.py  logs.py  prompt.py  readme.py
src/difftotweet/config/: config_schema.py  load_config.py  settings.py
src/difftotweet/providers/: __init__.py  base.py  openai_provider.py
tests/: test_approval.py  test_cli.py  test_config_loader.py  test_git_and_notes.py  test_logs.py  test_prompt.py  test_providers.py  test_readme.py
